150*150*3 format is added

--- a/main_classifier/live_format.ipynb
+++ b/main_classifier/live_format.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "id": "1142873b",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,6 @@
     "import cv2\n",
     "import io\n",
     "import wave\n",
-    "\n",
     "import os\n",
     "import matplotlib\n",
     "matplotlib.use('Agg') # No pictures displayed \n",
@@ -27,12 +26,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def writeCutSound(result): # this function for futute testing in a truck\n",
+    "    \n",
+    "    count = 0\n",
+    "    if (result == 1):\n",
+    "        write(\"example\" + str(count) + \".wav\", 44100, data.astype(np.int16))\n",
+    "        count = 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "id": "3da9e901",
    "metadata": {},
    "outputs": [],
    "source": [
     "def do_spec (record, save_path):\n",
+    "\n",
     "    sig = record\n",
     "    fs = 44100\n",
     "    sig, fs = librosa.load(filename, sr=None)\n",
@@ -47,13 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "def do_spec_1 (record):\n",
     "      \n",
-    "    fig = pylab.figure()\n",
+    "    fig = pylab.figure(figsize = (1, 1))\n",
+    "\n",
     "    pylab.axis('off') # no axis\n",
     "    pylab.axes([0., 0., 1., 1.], frameon=False, xticks=[], yticks=[]) # Remove the white edge\n",
     "    S = librosa.feature.melspectrogram(y=record, sr=fs)\n",
@@ -65,21 +80,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_img_from_fig(fig):\n",
+    "    \n",
+    "    buf = io.BytesIO()\n",
+    "    fig.savefig(buf, format='png', bbox_inches=None, pad_inches=0, dpi = 150)\n",
+    "    buf.seek(0)\n",
+    "    img_arr = np.frombuffer(buf.getvalue(), dtype=np.uint8)\n",
+    "    buf.close()\n",
+    "    img = cv2.imdecode(img_arr, 1)\n",
+    "    img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "    return img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "def preprocessing_spectrogram(img_arr):\n",
     "    \n",
-    "    f = cv2.resize(img_arr, (150, 150))\n",
-    "    res = f.reshape(-1, 150, 150, 3)\n",
+    "    #f = cv2.resize(img_arr, (150, 150))\n",
+    "    res = img_arr.reshape(-1, 150, 150, 3)\n",
     "    \n",
     "    return res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,26 +131,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    def get_img_from_fig(fig):\n",
+    "def create_spectrogram(filename, path):\n",
     "\n",
-    "        buf = io.BytesIO()\n",
-    "        fig.savefig(buf, format='jpeg', bbox_inches=None, pad_inches=0)\n",
-    "        buf.seek(0)\n",
-    "        img_arr = np.frombuffer(buf.getvalue(), dtype=np.uint8)\n",
-    "        buf.close()\n",
-    "        img = cv2.imdecode(img_arr, 1)\n",
-    "        img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+    "    plt.interactive(False)\n",
+    "    clip, sample_rate = librosa.load(filename, sr=None)\n",
     "\n",
-    "        return img"
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_subplot(111)\n",
+    "    ax.axes.get_xaxis().set_visible(False)\n",
+    "    ax.axes.get_yaxis().set_visible(False)\n",
+    "    ax.set_frame_on(False)\n",
+    "    S = librosa.feature.melspectrogram(y=clip, sr=sample_rate)\n",
+    "    librosa.display.specshow(librosa.power_to_db(S, ref=np.max))\n",
+    "\n",
+    "    #plt.savefig(path, dpi=400, bbox_inches='tight',pad_inches=0)\n",
+    "    plt.imsave('ddd.png')\n",
+    "    plt.close()\n",
+    "    fig.clf()\n",
+    "    plt.close(fig)\n",
+    "    plt.close('all')\n",
+    "    del filename,clip,sample_rate,fig,ax,S"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "id": "4430bbd4",
    "metadata": {},
    "outputs": [
@@ -124,10 +167,6 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Посторонний шум\n",
-      "Посторонний шум\n",
-      "Посторонний шум\n",
-      "Посторонний шум\n",
       "Посторонний шум\n",
       "Посторонний шум\n",
       "Посторонний шум\n",
@@ -142,7 +181,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-37-7928b497e9e6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mrecord\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseconds\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mfs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msamplerate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchannels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0msd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Wait until recording is finished\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mrecord\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmakeNewFormatArr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecord\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-46-6790d70993b8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mrecord\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseconds\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mfs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msamplerate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchannels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0msd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Wait until recording is finished\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mrecord\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmakeNewFormatArr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecord\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/sounddevice.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(ignore_errors)\u001b[0m\n\u001b[1;32m    390\u001b[0m     \"\"\"\n\u001b[1;32m    391\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0m_last_callback\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 392\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_last_callback\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mignore_errors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    393\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    394\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/sounddevice.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, ignore_errors)\u001b[0m\n\u001b[1;32m   2590\u001b[0m         \"\"\"\n\u001b[1;32m   2591\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2592\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2593\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2594\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstream\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mignore_errors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/lib/python3.7/threading.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    550\u001b[0m             \u001b[0msignaled\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_flag\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    551\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0msignaled\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 552\u001b[0;31m                 \u001b[0msignaled\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_cond\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    553\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0msignaled\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    554\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -174,13 +213,13 @@
     "    if (final_result[0][0] == 1):\n",
     "        print(\"Разрез бумаги\")\n",
     "    else:\n",
-    "        print(\"Посторонний шум\")\n"
+    "        print(\"Посторонний шум\")\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "454faf22",
    "metadata": {},
    "outputs": [],
    "source": []
