--- a/svm_model/DataAnalys.ipynb
+++ b/svm_model/DataAnalys.ipynb
@@ -1320,25 +1320,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sounddevice as sd\n",
-    "from scipy.io.wavfile import write\n",
-    "\n",
-    "fs = 44100  # Sample rate\n",
-    "seconds = 1  # Duration of recording\n",
-    "\n",
-    "while(True)\n",
-    "    myrecording = sd.rec(int(seconds * fs), samplerate=fs, channels=2)\n",
-    "    sd.wait()  # Wait until recording is finished\n",
-    "    \n",
-    "    #write('output.wav', fs, myrecording) # конверт в wav и сохранение"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
    "outputs": [
@@ -1387,9 +1368,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python377jvsc74a57bd00d537df178d4a96c2cf8ca99df555b0d4bf3b31be3996b0ee2dcd6eb18f548f4",
+   "display_name": "Python 3.7.7 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1402,6 +1382,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.7"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "0d537df178d4a96c2cf8ca99df555b0d4bf3b31be3996b0ee2dcd6eb18f548f4"
+   }
   }
  },
  "nbformat": 4,
