--- a/main_classifier/model.ipynb
+++ b/main_classifier/model.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
     "import random\n",
     "random.seed(228)\n",
     "import pandas as pd\n",
-    "from sklearn.metrics import confusion_matrix, accuracy_score\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score, f1_score\n",
     "from tensorflow.keras.models import load_model"
    ]
   },
@@ -404,14 +404,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f1_score(y_true, y_pred)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python377jvsc74a57bd00d537df178d4a96c2cf8ca99df555b0d4bf3b31be3996b0ee2dcd6eb18f548f4",
+   "display_name": "Python 3.7.7 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -423,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.7"
   },
   "metadata": {
    "interpreter": {
